--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 
 .conteiner{
     display: grid;
-    grid-template-rows: 120px 2fr 80px;
+    grid-template-rows: 16vh 2fr 80px;
     width: 100%;
     max-width: 1200px;
     min-height: 100vh;
@@ -18,7 +18,7 @@
 .list {
     list-style-type: none;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    
 }
 
@@ -54,7 +54,8 @@ h1 {
 
 .divitem {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    /* grid-template-columns: repeat(4, 1fr); */
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     grid-gap: 15px;
     padding: 0 15px 0 15px;
 }
@@ -66,7 +67,6 @@ h1 {
 .third {
     grid-column: 3 / 5;
     grid-row: 1 / 3;
-    width: auto;
 }
 
 .six {
