--- a/index.css
+++ b/index.css
@@ -45,6 +45,10 @@ h1 {
     border-radius: 22px;
   }
 
+  .button:hover {
+    background-color: pink;
+  }
+
 .main {
     background-color: rgb(70,130,180);
     display: grid;
